Adjust credit width to prevent horizontal scroll

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -23,8 +23,9 @@
 
 #home .credit {
   position: relative;
-  left: 240px;
+  left: 470px;
   bottom: 25px;
+  width: 240px;
   font-size: 0.8rem;
 }
 
